# rust-binst

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: app_error.rs  argc.rs  argv.rs  error.rs  main.rs  paths.rs  utils.rs
src/assets/: env
src/cmd/: clap_cmd.rs  error.rs  exec.rs  mod.rs  setup.rs
src/exec/: argc.rs  mod.rs  setup.rs
src/repo/: aws_provider.rs  error.rs  install.rs  mod.rs  publish.rs  repo_info.rs
src/repo/s3w/: cred.rs  mod.rs
src/setup/: mod.rs
