[package]
name = "binst"
version = "0.1.2-RC.2"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"
description = "binst's goal is to provide a simple way to publish and install Rust based binaries without the need of cargo-install and the complexity of OS dependent package managers"
homepage = "https://github.com/jeremychone/rust-binst"
repository = "https://github.com/jeremychone/rust-binst"
keywords = [
	"cli",
	"binary",
	"install",
	"publish"
]
categories = ["command-line-interface"]
license = "MIT"

[dependencies]
tokio = {version = "1.5.0", features = ["full"]}
reqwest = { version = "0.11", features = ["rustls-tls"]}
anyhow = "1.0"
rust-s3 = "0.28"
platform-info = "0.2.0"
dirs = "4.0"
clap =  {version = "3", features = ["cargo"]}
thiserror = "1.0"
toml = "0.5"
tar = "0.4"
libflate = "1"
regex = "1"
semver = "1.0.3"
url = "2"
## Not needed for now (using platform-info)
# os_info = { version = "3.0", default-features = false }