[package]
name = "binst"
version = "0.1.6"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"
description = "binst's goal is to provide a simple way to publish and install Rust based binaries without the need of cargo-install and the complexity of OS dependent package managers"
homepage = "https://github.com/jeremychone/rust-binst"
repository = "https://github.com/jeremychone/rust-binst"
keywords = [
	"cli",
	"binary",
	"install",
	"publish"
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}
mime_guess = "2"
platform-info = "1"
dirs = "4.0"
clap =  {version = "4", features = ["cargo"]}
thiserror = "1.0"
toml = "0.7"
tar = "0.4"
libflate = "1"
regex = "1"
semver = "1.0"
# Aws libs
aws-sdk-s3 = "0.24"
aws-config = "0.54"
aws-types = "0.54"
aws-smithy-http = "0.54"